--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,5 +14,10 @@
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
 <%= link_to "Back to Article list", articles_path %>
-<%= link_to "Delete Article", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
-<%= link_to "Edit", edit_article_path(@article) %>
+<% if logged_in? %>
+    <%= link_to "Delete Article", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+<% end %>
+
+<% if logged_in? %>
+    <%= link_to "Edit", edit_article_path(@article) %>
+<% end %>
