--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,4 +12,4 @@
 <% if logged_in? %>
 <%= link_to "Create a New Article", new_article_path, class: "new_article" %>
 <% end %>
-<p> <%= link_to 'Create new Account', new_author_session_path %> </p>
+<!-- <p> <%= link_to 'Create new Account', new_author_session_path %> </p> -->
